--- a/Views/ProductoPage.xaml
+++ b/Views/ProductoPage.xaml
@@ -56,7 +56,7 @@
                 CornerRadius="50"
                 HorizontalOptions="Center"
                 FontSize="20"
-                    Clicked="OnUsuarioClicked"
+                    Clicked="OnBuscaClicked"
                     BackgroundColor="Red"
                     Margin="0,10" />
 
